static/scss/partials/main.scss
:root {
  --blue3: #0060df;
  --blue4: #0250bb;
  --blue5: #073072;
  --blue7: #003eaa;
  --blue8: #002275;
  --buttonFocus: 0 0 0 1px #0a84ff, 0 0 0 1px #0a84ff, 0 0 0 4px rgba(10, 132, 255, 0.3);
  --darkBlueGradient: linear-gradient(60deg, #2d264e, #26294e);
  --dropShadowLight: 0 0 10px -3px #3d3f4740;
  --dropShadowDark: 0 12px 18px 2px rgba(34, 0, 51, 0.09), 0 6px 22px 4px rgba(4, 25, 59, 0.87), 0 6px 10px -4px rgba(14, 13, 26, 0.12);
  --grey10: hsl(240, 9%, 98%);
  --grey20: #f1f1f3;
  --grey30: #d7d7db;
  --grey40: #b1b1b3;
  --grey50: #737373;
  --grey60: #4a4a4f;
  --grey70: #38383d;
  --grey80: #2a2a2e;
  --grey90: #0c0c0d;
  --inkLight: #2b1e44;
  --ink: #20123a;
  --inkDark: #1d1133;
  --textDark: var(--grey70);
  --lightestGray: rgba(123, 127, 141, 0.071);
  --maxContentWidth: 1350px;
  --metropolis: "Metropolis", Arial, Helvetica, sans-serif;
  --fxGradient: linear-gradient(-90deg, #ff9100 0%, #f10366 50%, #6173ff 100%);
  --h1Gradient: linear-gradient(-90deg, #83a0f7, #b66dff);
  --rowFullWidthHPadding: 2.25em;
  --rowFullWidthVPadding: 1.25em;
  --violet3: #9059ff;
  --violet4: #7542e5;
  --warningRed: #d70022;
  --successGreen: #00D053; 
  --white: #fff;
  --background: #F5F7F9;
  --dashboardMaxWith: calc(830px + 3rem);
  --bannerGray: #42425A;
}

* {
  box-sizing: border-box;
}

html {
  font-size: 100%;
}

body {
  font-family: "Inter", Helvetica Neue, Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  min-height: 100vh;
  background-image: var(--darkBlueGradient);
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 83px 0 0 0;
  font-size: 16px;
  overscroll-behavior: contain;
  line-height: 1.2;
}

h1, h2, h3, h4, h5, h6 {
  color: $color-light-gray-10;
}

:visited:hover, :visited:focus, :visited:active {
  color: $color-light-gray-10;
}

.loading {
  background-image: url("/static/images/loader.svg");
  background-position: center center;
  background-repeat: no-repeat;
}

.text-light {
  color: $color-white;
}

.text-link, .text-link:link {
  border-radius: 2px;
  color: inherit;
  text-decoration: underline;
  transition: all 0.2s ease;
}

.text-link:hover {
  opacity: 0.8;
  transition: all 0.2s ease;
}

.blue-btn-states:focus,
.text-link:focus {
  box-shadow: var(--buttonFocus);
  outline: none;
}

.text-light-grey {
  color: var(--grey20);
}

.bg-light {
  background: $color-light-gray-10;
}

.drop-shadow-light {
  box-shadow: var(--dropShadowLight);
}

.row-full-width {
  padding: var(--rowFullWidthVPadding) var(--rowFullWidthHPadding);
}

.full-width {
  padding: 0.75em var(--rowFullWidthHPadding);
}

h1,
h2,
.button,
.ff-Met {
  font-family: var(--metropolis);
}

.section-headline {
  font-weight: 600;
  color: var(--grey90);
  margin: 0;
}

a, :link, button {
  text-decoration: none;
}

.header-nav {
  margin: auto 0 auto auto;
}

.header-link {
  border-radius: 4px;
  padding: 4px 6px;
  color: $color-white !important;
  margin-left: 1em;
}

.header-link::after {
  width: 100%;
  height: 2px;
  display: block;
  content: "";
  background: var(--fxGradient);
  opacity: 0;
  margin-bottom: -6px;
  margin-top: 4px;
}

.active-header-link::after {
  opacity: 1;
}

.home-hero-headline {
  font-size: 3.2em;
  margin: 28px auto 20px auto;
  line-height: 1;
  background: var(--h1Gradient);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.sub-head {
  font-size: 1.15em;
  line-height: 1.4;
}

button,
.button {
  text-decoration: none;
  border-style: solid;
  font-size: 1.1em;
}

.button,
.button:hover,
.button:active,
button,
button:hover,
button:active {
  transition: all 0.1s ease;
}

.blue-button {
  position: relative;
  color: rgba(255, 255, 255, 1);
  border: none;
  outline: none;
  background-color: $color-blue-50;
  background-position: center center;
  border-radius: 2px;
  min-height: 32px;
  padding: 8px 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: var(--metropolis);
}

.blue-btn-states:hover,
.blue-button:hover {
  background-color: var(--blue7);
}

.sign-in:focus,
.blue-button:focus,
.forwarding-toggle:focus,
.blue-btn-states:focus {
  box-shadow: var(--buttonFocus);
  outline: none;
}

.blue-button:active,
.forwarding-toggle:active,
.blue-btn-states:active {
  background-color: var(--blue8);
  box-shadow: 0 0 0 1px rgba(10, 132, 255, 0) inset, 0 0 0 1px rgba(10, 132, 255, 0), 0 0 0 4px rgba(10, 132, 255, 0);
}

.blue-button.loading {
  color: rgba(255, 255, 255, 0.2);
  background-color: var(--blue4);
  transition: all 0.3s ease;
}

.puffy {
  min-height: 48px;
  border-radius: 4px;
  min-width: 200px;
}

::-moz-focus-inner {
  border: 0;
}

.home-hero {
  margin: 0 auto 6em auto;
  position: relative;
}

.how-it-works-steps,
.how-it-works-content {
  width: 100%;
}

.how-it-works-header {
  font-size: 2em;
  margin: 0 auto 20px auto;
}

.how-it-works-steps {
  justify-content: space-between;
  max-width: var(--maxContentWidth);
  padding: 4em 0;
  margin-bottom: 4em;
}

.step-illustration {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 300px;
  min-width: 300px;
  max-width: 300px;
  border-radius: 12px;
  border: 1px solid #AB71FF;
  margin: 0 auto 2em auto;
}

.step-1.step-illustration {
  background-image: url("/static/images/how-it-works/how-it-works-1.svg");
}

.step-2.step-illustration {
  background-image: url("/static/images/how-it-works/how-it-works-2.svg");
}

.step-3.step-illustration {
  background-image: url("/static/images/how-it-works/how-it-works-3.svg");
}

.step {
  flex-direction: column;
  flex: 0 1 31.333%;
}

.step-text {
  display: flex;
  justify-content: center;
  flex-direction: column;
  max-width: 300px;
}

.step-headline {
  font-size: 1.25em;
  line-height: 1.3;
  margin: 0 auto 1em 0;
}
/* ... */

